# LRender

./: CMakeLists.txt  LearningNotes  LearningNotes.md  README.md  gitchangeauthor.bat
include/: display.h  image.h  lrCamera.h  lrDisplay.h  lrGraphic.h  lrImage.h  lrMacro.h  lrMath.h  lrMesh.h  lrModel.h  lrShader.h  lrStatus.h  lrTexture.h  macro.h  rlMath.h
src/: displayMac.mm  displayMacTest.cpp  displayWin.cpp  image.cpp  lrCamera.cpp  lrDisplayWin.cpp  lrGraphic.cpp  lrImage.cpp  lrMath.cpp  lrMesh.cpp  lrModel.cpp  lrShader.cpp  lrTexture.cpp  main.cpp  rlMath.cpp
test/: main.cpp
